--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -1,6 +1,6 @@
 <div class="well" id="menu_font" style="font-size: 20px;" >
   <center><%=@date.to_date.year%>년 <%=@date.to_date.month%>월 <%=@date.to_date.day%>일<br><%=@class.building_name%> '<%=@class.room_number%>호'에 대한 예약현황입니다.
-  <br><a href="/book/booking/<%=@class.id%>&date=<%=@date%>" class="btn btn-warning" id="menu_font" style="font-size: 20px;">예약하기</a></center>
+  <br><a href="/book/booking?id=<%=@class.id%>&date=<%=@date%>" class="btn btn-warning" id="menu_font" style="font-size: 20px;">예약하기</a></center>
 </div>
 <br>
 
@@ -29,105 +29,6 @@
 
   
  
-<!--  <div class="panel panel-info">-->
-    
-  <!--  <div class="panel-heading">-->
-  <!--    <h3 class="panel-title"><center>예약 타임 테이블 </center></h3>-->
-  <!--  </div>-->
-    
-  <!--  <div class="panel-body">-->
-  <!--    <table class="table table-striped table-hover ">-->
-  <!--      <thead>-->
-  <!--        <tr>-->
-  <!--          <th width="15%">시간 \ 요일</th>-->
-  <!--          <th id="월">월</th>-->
-  <!--          <th id="화">화</th>-->
-  <!--          <th id="수">수</th>-->
-  <!--          <th id="목">목</th>-->
-  <!--          <th id="금">금</th>-->
-
-  <!--        </tr>-->
-  <!--      </thead>-->
-  <!--      <tbody>-->
-  <!--        <tr>-->
-  <!--          <td id="1교시">09:00 - 10:00</td>-->
-  <!--          <td id="월1"></td>-->
-  <!--          <td id="화1"></td>-->
-  <!--          <td id="수1"></td>-->
-  <!--          <td id="목1"></td>-->
-  <!--          <td id="금1"></td>-->
-  <!--        </tr>-->
-          
-  <!--        <tr>-->
-  <!--          <td id="2교시">10:00 - 11:00</td>-->
-  <!--          <td id="월2"></td>-->
-  <!--          <td id="화2"></td>-->
-  <!--          <td id="수2"></td>-->
-  <!--          <td id="목2"></td>-->
-  <!--          <td id="금2"></td>-->
-  <!--        </tr>-->
-  <!--        <tr>-->
-  <!--          <td id="3교시">12:00 - 13:00</td>-->
-  <!--          <td id="월3"></td>-->
-  <!--          <td id="화3"></td>-->
-  <!--          <td id="수3"></td>-->
-  <!--          <td id="목3"></td>-->
-  <!--          <td id="금3"></td>-->
-  <!--        </tr>-->
-  <!--        <tr>-->
-  <!--          <td id="4교시">13:00 - 14:00</td>-->
-  <!--          <td id="월4"></td>-->
-  <!--          <td id="화4"></td>-->
-  <!--          <td id="수4"></td>-->
-  <!--          <td id="목4"></td>-->
-  <!--          <td id="금4"></td>-->
-  <!--        </tr>-->
-  <!--        <tr>-->
-  <!--          <td id="5교시">14:00 - 15:00</td>-->
-  <!--          <td id="월5"></td>-->
-  <!--          <td id="화5"></td>-->
-  <!--          <td id="수5"></td>-->
-  <!--          <td id="목5"></td>-->
-  <!--          <td id="금5"></td>-->
-  <!--        </tr>-->
-  <!--        <tr>-->
-  <!--          <td id="6교시">15:00 - 16:00</td>-->
-  <!--          <td id="월6"></td>-->
-  <!--          <td id="화6"></td>-->
-  <!--          <td id="수6"></td>-->
-  <!--          <td id="목6"></td>-->
-  <!--          <td id="금6"></td>-->
-  <!--        </tr>-->
-  <!--        <tr>-->
-  <!--          <td id="7교시">16:00 - 17:00</td>-->
-  <!--          <td id="월7"></td>-->
-  <!--          <td id="화7"></td>-->
-  <!--          <td id="수7"></td>-->
-  <!--          <td id="목7"></td>-->
-  <!--          <td id="금7"></td>-->
-  <!--        </tr>-->
-  <!--        <tr>-->
-  <!--          <td id="8교시">17:00 - 18:00</td>-->
-  <!--          <td id="월8"></td>-->
-  <!--          <td id="화8"></td>-->
-  <!--          <td id="수8"></td>-->
-  <!--          <td id="목8"></td>-->
-  <!--          <td id="금8"></td>-->
-  <!--        </tr>-->
-  <!--        <tr>-->
-  <!--          <td id="9교시">18:00 - 19:00</td>-->
-  <!--          <td id="월9"></td>-->
-  <!--          <td id="화9"></td>-->
-  <!--          <td id="수9"></td>-->
-  <!--          <td id="목9"></td>-->
-  <!--          <td id="금9"></td>-->
-  <!--        </tr>-->
-  <!--      </tbody>-->
-  <!--    </table>-->
-  <!--  </div>-->
-      
-  <!--</div>-->
-<!--</div>-->
 
 
 <div class="col-md-7 col-md-offset-0">
