--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,11 +44,11 @@
   </div>
 <% end %>
 
-<!--<h3>회원탈퇴</h3>-->
+<h3>회원탈퇴</h3>
 
-<!--<p><#%= button_to "회원탈퇴", registration_path(resource_name), data: { confirm: "탈퇴하시겠습니까?" }, method: :delete %></p>-->
+<p><%= button_to "회원탈퇴", registration_path(resource_name), data: { confirm: "탈퇴하시겠습니까?" }, method: :delete %></p>
 
-<!--<%#= link_to "Back", :back %>-->
+<%= link_to "Back", :back %>
 </center>
 
 <br><br><br><br><br><br> 
